remove full paths from linker options
in order to use the search directory paths instead.

Most windows users end up using the mingw installer when setting up their toolchain, so all these paths end up having to be edited.

This change makes it so that only the search directories need to be changed when the paths are inevitably wrong, and makes setting them in the Win32 build redundant.

--- a/EndlessSky.cbp
+++ b/EndlessSky.cbp
@@ -33,7 +33,6 @@
 				<Option object_output="obj/Win32/" />
 				<Option type="0" />
 				<Option compiler="gnu_gcc_compiler_win32" />
-				<Option projectLinkerOptionsRelation="1" />
 				<Option projectIncludeDirsRelation="1" />
 				<Option projectLibDirsRelation="1" />
 				<Compiler>
@@ -41,18 +40,6 @@
 					<Add directory="C:/dev32/include" />
 				</Compiler>
 				<Linker>
-					<Add option="-Wl,--subsystem,windows" />
-					<Add option="-lwinmm" />
-					<Add library="C:\Program Files (x86)\mingw-w64\i686-5.2.0-posix-dwarf-rt_v4-rev0\mingw32\i686-w64-mingw32\lib\libmingw32.a" />
-					<Add library="C:\dev32\lib\libsdl2main.a" />
-					<Add library="C:\dev32\lib\libsdl2.dll.a" />
-					<Add library="C:\dev32\lib\libpng.dll.a" />
-					<Add library="C:\dev32\lib\libturbojpeg.dll.a" />
-					<Add library="C:\dev32\lib\libjpeg.dll.a" />
-					<Add library="C:\dev32\lib\libmad.dll.a" />
-					<Add library="C:\dev32\lib\libopenal32.dll.a" />
-					<Add library="C:\dev32\lib\libglew32.dll.a" />
-					<Add library="C:\Program Files (x86)\mingw-w64\i686-5.2.0-posix-dwarf-rt_v4-rev0\mingw32\i686-w64-mingw32\lib\libopengl32.a" />
 					<Add directory="C:/dev32/lib" />
 				</Linker>
 			</Target>
@@ -65,16 +52,16 @@
 		<Linker>
 			<Add option="-Wl,--subsystem,windows" />
 			<Add option="-lwinmm" />
-			<Add library="C:\Program Files\mingw64\x86_64-w64-mingw32\lib\libmingw32.a" />
-			<Add library="C:\dev64\lib\libsdl2main.a" />
-			<Add library="C:\dev64\lib\libsdl2.dll.a" />
-			<Add library="C:\dev64\lib\libpng.dll.a" />
-			<Add library="C:\dev64\lib\libturbojpeg.dll.a" />
-			<Add library="C:\dev64\lib\libjpeg.dll.a" />
-			<Add library="C:\dev64\lib\libmad.dll.a" />
-			<Add library="C:\dev64\lib\libopenal32.dll.a" />
-			<Add library="C:\dev64\lib\libglew32.dll.a" />
-			<Add library="C:\Program Files\mingw64\x86_64-w64-mingw32\lib\libopengl32.a" />
+			<Add library="mingw32" />
+			<Add library="sdl2main" />
+			<Add library="sdl2.dll" />
+			<Add library="png.dll" />
+			<Add library="turbojpeg.dll" />
+			<Add library="jpeg.dll" />
+			<Add library="mad.dll" />
+			<Add library="openal32.dll" />
+			<Add library="glew32.dll" />
+			<Add library="opengl32" />
 			<Add directory="C:/dev64/lib" />
 		</Linker>
 		<Unit filename="source/AI.cpp" />
